kubernetes/upload/http-filemanager-service/templates/upload.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  labels:
    app: "upload"
  name: "http-filemanager-service"
spec:
  ports:
  - name: "http-http-filemanager-service"
    port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "upload"
  type: "NodePort"
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: "upload"
  name: "http-filemanager-ingress"
spec:
  rules:
  - host: "http-filemanager.io"
    http:
      paths:
      - backend:
          serviceName: "http-filemanager-service"
          servicePort: 9090
        path: "/"
  tls:
  - hosts:
    - "http-filemanager.io"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  annotations: {}
  labels:
    app: "upload"
  name: "http-filemanager-service"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "upload"
  template:
    metadata:
      annotations: {}
      labels:
        app: "upload"
    spec:
      containers:
      - env:
        - name: "CONFIG_FILE"
          value: "/home/ballerina/conf/ballerina.conf"
        image: "quay.io/ddefrancesco/http_filemanager:v1.0"
        imagePullPolicy: "IfNotPresent"
        name: "http-filemanager-service"
        ports:
        - containerPort: 9090
          protocol: "TCP"
        volumeMounts:
        - mountPath: "/home/ballerina/./security"
          name: "httplistener-keystore-volume"
          readOnly: true
        - mountPath: "/home/ballerina/conf/"
          name: "multipartservice-ballerina-conf-config-map-volume"
          readOnly: false
      nodeSelector: {}
      volumes:
      - name: "httplistener-keystore-volume"
        secret:
          secretName: "httplistener-keystore"
      - configMap:
          name: "multipartservice-ballerina-conf-config-map"
        name: "multipartservice-ballerina-conf-config-map-volume"
